--- a/UserInterface/Assets/Styling/ListViewStyle.xaml
+++ b/UserInterface/Assets/Styling/ListViewStyle.xaml
@@ -36,4 +36,32 @@
         </Setter>
     </Style>
 
+    <Style TargetType="{x:Type ListViewItem}">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#E6E6E6" />
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="Padding" Value="0" />
+                <Setter Property="Margin" Value="0" />
+            </Trigger>
+        </Style.Triggers>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" 
+                            
+                            Background="{TemplateBinding Background}"
+                            SnapsToDevicePixels="true">
+                        <GridViewRowPresenter 
+                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                    Width="{TemplateBinding Width}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
 </ResourceDictionary>
