--- a/UserInterface/Assets/Styling/InputFieldStyles.xaml
+++ b/UserInterface/Assets/Styling/InputFieldStyles.xaml
@@ -41,4 +41,8 @@
         <Setter Property="Width" Value="620"/>
     </Style>
 
+    <Style x:Key="InputField_XXL" BasedOn="{StaticResource InputField}" TargetType="{x:Type TextBox}">
+        <Setter Property="Width" Value="820"/>
+    </Style>
+
 </ResourceDictionary>
