--- a/UserInterface/Views/AudiometryQuestion.xaml
+++ b/UserInterface/Views/AudiometryQuestion.xaml
@@ -4,38 +4,42 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UserInterface.Views"
-             mc:Ignorable="d" 
-             Height="650" Width="500">
-    <Border CornerRadius="40" Background="white" Padding="20">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="20" ShadowDepth="1"  Color="#dcdcdc"/>
-        </Border.Effect>
+             mc:Ignorable="d">
+    <Border Style="{StaticResource ContentContainer_XXS}">
         <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-                <Grid Grid.Row="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="4*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="0" Background="LightGray">
-                        <Button Style="{StaticResource PlayButton}" Grid.Row="0" Command="{Binding MakeSoundCommand}">
-                            <Image Source="{StaticResource ic_play_white}" Margin="30,20,20,20"/>
-                        </Button>
-                    </Grid>
-                    <TextBlock Grid.Row="1" HorizontalAlignment="Center"  >Druk op play om het geluid te herhalen.</TextBlock>
-                </Grid>
-
-
-                <TextBlock Grid.Row="1" HorizontalAlignment="Center" Margin="0 40 0 0">Heeft u het geluid gehoord?</TextBlock>
-                <Button Grid.Row="1" Style="{StaticResource SecondaryButton}" Content="Ja" Height="50" Width="200" VerticalAlignment="Bottom" HorizontalAlignment="Left" Command="{Binding SaveAudioQuestionCommand}" CommandParameter="true"/>
-                <Button Grid.Row="1" Style="{StaticResource SecondaryButton}" Content="Nee" Height="50" Width="200" VerticalAlignment="Bottom" HorizontalAlignment="Right" Command="{Binding SaveAudioQuestionCommand}" CommandParameter="false"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Rectangle 
+                Fill="{StaticResource SecondaryBackgroundColor}"
+                Grid.Row="0"
+                Margin="50"
+                Height="420"
+                Width="420"/>
+            <TextBlock 
+                Style="{StaticResource Text}"
+                Grid.Row="2"
+                HorizontalAlignment="Center"
+                Text="Heeft u het geluid gehoord?"/>
+            <Grid Grid.Row="3" Margin="0 30 0 0">
+                <Button 
+                    Style="{StaticResource PrimaryButton_S}" 
+                    Content="Ja" 
+                    HorizontalAlignment="Left" 
+                    Command="{Binding SaveAudioQuestionCommand}" 
+                    CommandParameter="true"/>
+                <Button 
+                    Style="{StaticResource PrimaryButton_S}" 
+                    Content="Nee" 
+                    HorizontalAlignment="Right" 
+                    Command="{Binding SaveAudioQuestionCommand}" 
+                    CommandParameter="false"/>
             </Grid>
-        </Border>
+        </Grid>
+    </Border>
 </UserControl>
 
     
