--- a/UserInterface/Views/Question.xaml
+++ b/UserInterface/Views/Question.xaml
@@ -4,39 +4,39 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UserInterface.Views"
-             mc:Ignorable="d" 
-             Height="650" Width="1450">
-    <Border CornerRadius="40" Background="white" Padding="20">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="20" ShadowDepth="1"  Color="#dcdcdc"/>
-        </Border.Effect>
-       
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
-                    <ColumnDefinition Width="3*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="4*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="60"/>
-                    </Grid.RowDefinitions>
+             mc:Ignorable="d">
+    <Border Style="{StaticResource ContentContainer_XL}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="4*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
 
-                    <TextBlock Style="{StaticResource Header}" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
+                <TextBlock Style="{StaticResource Header}" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
 
-                    <StackPanel Grid.Row="1" Visibility="{Binding QuestionRadioButtons}">
+                <StackPanel Grid.Row="1" Visibility="{Binding QuestionRadioButtons}">
                     <ListBox SelectedItem="{Binding SelectedOption}" FontSize="30" ItemsSource="{Binding RadioButtons}"/>
-                    </StackPanel>
+                </StackPanel>
 
-                <TextBlock Text="Anders, namelijk:" Grid.Row="2" VerticalAlignment="Center" Visibility="{Binding QuestionInput}" />
-                    <TextBox Margin="250 0 0 0" Visibility="{Binding QuestionInput}" Text="{Binding QuestionInputText}" Grid.Row="2" HorizontalAlignment="Left" TextWrapping="Wrap" Width="200" VerticalAlignment="Center" FontSize="20"/>
-                    
-                    <Button Style="{StaticResource SecondaryButton}" Grid.Row="3" Content="Volgende vraag" Command="{Binding SaveQuestionCommand}"/>
-                    
-                </Grid>
-                <Image Grid.Column="1" Source="/UserInterface;component/Assets/Images/test.png"></Image>
+                <TextBlock Style="{StaticResource Text}" Text="Anders, namelijk:" Grid.Row="2" VerticalAlignment="Center" Visibility="{Binding QuestionInput}" />
+                <TextBox Margin="250 0 0 0" Visibility="{Binding QuestionInput}" Text="{Binding QuestionInputText}" Grid.Row="2" HorizontalAlignment="Left" TextWrapping="Wrap" Width="200" VerticalAlignment="Center" FontSize="20"/>
+
+                <Button 
+                    Style="{StaticResource PrimaryButton_L}" 
+                    Grid.Row="3" 
+                    HorizontalAlignment="Left"
+                    Content="Volgende vraag" 
+                    Command="{Binding SaveQuestionCommand}"/>
             </Grid>
-        </Border>
+            <Image Grid.Column="1" Source="/UserInterface;component/Assets/Images/test.png"></Image>
+        </Grid>
+    </Border>
 </UserControl>
