--- a/UserInterface/Views/TestResultView.xaml
+++ b/UserInterface/Views/TestResultView.xaml
@@ -5,10 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:images="clr-namespace:UserInterface.Assets.Images"
              mc:Ignorable="d">
-    <Border CornerRadius="40" Background="white" Padding="30" Height="740" Width="1580">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="20" ShadowDepth="1" Color="#dcdcdc"/>
-        </Border.Effect>
+    <Border Style="{StaticResource ContentContainer_XL}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -26,17 +23,21 @@
                 Grid.Column="0"
                 Orientation="Vertical">
                 <TextBlock 
-                    HorizontalAlignment="Center"
                     Style="{StaticResource Header}"
-                    Text="Testresultaten" />
-                <TextBlock Text="U heeft de test succesvol afgerond." />
+                    HorizontalAlignment="Center"
+                    Text="Testresultaten"/>
+                <TextBlock 
+                    Style="{StaticResource Text}" 
+                    Text="U heeft de test succesvol afgerond."/>
                 <TextBlock 
                     Style="{StaticResource SubHeader}"
-                    Text="{Binding TestResultText}" />
+                    Margin="0 30 0 0"
+                    Text="{Binding TestResultText}"/>
                 <TextBlock 
+                    Style="{StaticResource Text}"
                     Margin="0 30 0 0"
                     TextWrapping="Wrap"
-                    Text="{Binding TestResultExplanation}" />
+                    Text="{Binding TestResultExplanation}"/>
             </StackPanel>
 
             <images:PositiveTestResult
@@ -53,10 +54,11 @@
                 Visibility="{Binding NegativeTestResult}"/>
 
             <TextBlock
+                Style="{StaticResource Text}"
                 Grid.Row="2"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
-                Padding="0 0 0 30"
+                Padding="0 0 0 15"
                 TextWrapping="Wrap" 
                 Text="U kunt de testresultaten vrijblijvend naar uw e-mail versturen." />
             <!--of uitprinten-->
@@ -66,40 +68,20 @@
                 Grid.Column="0"
                 Grid.ColumnSpan="2">
                 <TextBlock
+                    Style="{StaticResource Text}"
                     Visibility="{Binding EmailError}"
                     Foreground="Red"
-                    FontSize="26"
-                    FontWeight="SemiBold"
+                    Padding="0 0 0 15"
                     Text="Vul een geldige e-mail in"/>
                 <StackPanel Orientation="Horizontal">
-                    <Border 
-                        CornerRadius="15"
-                        Height="70"
-                        Width="820"
-                        Background="#E6E6E6">
-                        <TextBox
-                            FontSize="32"
-                            Padding="10 0 10 0"
-                            Background="{x:Null}"
-                            BorderBrush="{x:Null}"
-                            VerticalContentAlignment="Center"
-                            Text="{Binding Email}"/>
-                    </Border>
-                    <Border 
-                        CornerRadius="35" 
-                        Height="70" 
-                        Width="420" 
-                        Background="{StaticResource PrimaryColor}"
-                        Margin="30 0 0 0">
-                        <Button
-                            FontSize="32"
-                            FontWeight="SemiBold"
-                            Foreground="White"
-                            Background="{x:Null}"
-                            BorderBrush="{x:Null}"
-                            Content="Verstuur e-mail"
-                            Command="{Binding SendEmailCommand}"/>
-                    </Border>
+                    <TextBox 
+                        Style="{StaticResource InputField_XXL}" 
+                        Text="{Binding Email}"/>
+                    <Button 
+                        Style="{StaticResource PrimaryButton_M}" 
+                        Margin="30 0 0 0"
+                        Content="Verstuur e-mail" 
+                        Command="{Binding SendEmailCommand}"/>
                     <!--<Border 
         CornerRadius="35" 
         Height="70" 
