--- a/UserInterface/App.xaml
+++ b/UserInterface/App.xaml
@@ -6,10 +6,12 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Assets/Styling/Colors.xaml"/>
+                <ResourceDictionary Source="Assets/Icons/ChevronDown.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/Icons.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/TextStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/InputFieldStyles.xaml"/>
+                <ResourceDictionary Source="Assets/Styling/DropdownStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/ContentContainerStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
