--- a/UserInterface/Assets/Styling/InputFieldStyles.xaml
+++ b/UserInterface/Assets/Styling/InputFieldStyles.xaml
@@ -6,16 +6,22 @@
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
                     <Border
+                        x:Name="Border"
                         Height="70"
                         CornerRadius="15"
                         Background="{StaticResource SecondaryBackgroundColor}">
                         <TextBox 
-                            Padding="10 0" 
+                            Padding="15 0" 
                             FontSize="32"
                             Background="{x:Null}"
                             BorderBrush="{x:Null}"
                             VerticalContentAlignment="Center"/>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="{StaticResource SecondaryBackgroundColor_Highlight}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
