--- a/UserInterface/Assets/Styling/ButtonStyles.xaml
+++ b/UserInterface/Assets/Styling/ButtonStyles.xaml
@@ -73,6 +73,10 @@
         </Setter>
     </Style>
 
+    <Style x:Key="SecondaryButton_Icon" BasedOn="{StaticResource SecondaryButton}" TargetType="{x:Type Button}">
+        <Setter Property="Width" Value="70" />
+    </Style>
+
     <Style x:Key="SecondaryButton_S" BasedOn="{StaticResource SecondaryButton}" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="220" />
     </Style>
