--- a/UserInterface/Assets/Styling/ListViewStyle.xaml
+++ b/UserInterface/Assets/Styling/ListViewStyle.xaml
@@ -6,17 +6,18 @@
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Padding" Value="-3,-1,-3,0"/>
         <!-- The padding is the most dirty solution there is but for some reason it has padding and i hate it.-->
-
     </Style>
 
     <!-- Style for the ListView Header -->
     <Style x:Key="ListViewHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
-        <Setter Property="Background" Value="{StaticResource PrimaryColor}" />
+        <Setter Property="Background" Value="{StaticResource SecondaryColor}" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="BorderBrush" Value="{StaticResource PrimaryColor}" />
+        <Setter Property="BorderBrush" Value="{StaticResource SecondaryColor}" />
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="Margin" Value="0,0,0,0"/>
+        <Setter Property="FontSize" Value="32"/>
         <Setter Property="Height" Value="62"/>
+        <Setter Property="Width" Value="auto"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
@@ -29,7 +30,6 @@
                             
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                         />
-                        
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -40,28 +40,27 @@
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="#E6E6E6" />
-                <Setter Property="BorderThickness" Value="0"/>
-                <Setter Property="Padding" Value="0" />
-                <Setter Property="Margin" Value="0" />
             </Trigger>
         </Style.Triggers>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListViewItem}">
-                    <Border BorderBrush="{TemplateBinding BorderBrush}" 
-                            
+                    <Border BorderBrush="{TemplateBinding BorderBrush}"
                             Background="{TemplateBinding Background}"
                             SnapsToDevicePixels="true">
                         <GridViewRowPresenter 
-                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
-                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                    Width="{TemplateBinding Width}"/>
+                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                            Height="100"
+                            Width="{TemplateBinding Width}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
+
+   
 
 </ResourceDictionary>
