--- a/UserInterface/Views/TestManagementView.xaml
+++ b/UserInterface/Views/TestManagementView.xaml
@@ -1,51 +1,166 @@
-﻿<UserControl x:Class="UserInterface.Views.Tests"
+﻿<UserControl x:Class="UserInterface.Views.TestManagementView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:images="clr-namespace:UserInterface.Assets.Images"
-             mc:Ignorable="d" 
-             Height="740" Width="1780">
-    <Border Padding="30" CornerRadius="40" Background="white">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="20" ShadowDepth="1" Color="#dcdcdc"/>
-        </Border.Effect>
-        <StackPanel Height="auto" Width="auto">
-            <FlowDocumentReader Height="638">
-                <FlowDocument>
-                    <Table >
-                        <Table.Columns>
-                            <TableColumn/>
-                            <TableColumn/>
-                            <TableColumn/>
-                        </Table.Columns>
+             xmlns:local="clr-namespace:UserInterface.Views"
+             xmlns:types="clr-namespace:BusinessLogic.Projections;assembly=BusinessLogic"
+             xmlns:commandLocation="clr-namespace:UserInterface.Commands"
+             mc:Ignorable="d" >
+    <Border Style="{StaticResource ContentContainer_XXL}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="515"/>
+                <ColumnDefinition Width="500"/>
+                <ColumnDefinition Width="675"/>
+            </Grid.ColumnDefinitions>
 
-                        <TableRowGroup>
-                            <TableRow>
-                                <TableCell ColumnSpan="3" Background="Cyan">
-                                    <Paragraph>This cell spans all three columns.</Paragraph>
-                                </TableCell>
-                            </TableRow>
-                            <TableRow>
-                                <TableCell Background="LightGray">
-                                    <Paragraph>Cell 1</Paragraph>
-                                </TableCell>
-                                <TableCell Background="LightGray">
-                                    <Paragraph>Cell 2</Paragraph>
-                                </TableCell>
-                                <TableCell Background="LightGray">
-                                    <Paragraph>Cell 3</Paragraph>
-                                </TableCell>
-                            </TableRow>
-                        </TableRowGroup>
-                    </Table>
-                </FlowDocument>
-            </FlowDocumentReader>
-            <Button Content="dsa"/>
-        </StackPanel>
-            
-        
-        
+            <!-- First column content -->
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="31*" />
+                    <RowDefinition Height="28*"/>
+                    <RowDefinition Height="18*"/>
+                    <RowDefinition Height="28*"/>
+                    <RowDefinition Height="31*"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" Orientation="Vertical" >
+                    <TextBlock Style="{StaticResource Text_Big}" VerticalAlignment="Center" Text="Naam test" Height="58" Width="auto"/>
+                    <TextBox Style="{StaticResource InputField_L}" ></TextBox>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="0,5,0,70" Grid.RowSpan="2" >
+                    <TextBlock Style="{StaticResource Text_Big}" Text="Leeftijdsgroep" Width="auto" Margin="0,0,0,10"/>
+                    <ComboBox Style="{StaticResource ComboBoxStyle}" Width="auto" Height="70" ItemsSource="{Binding AudiencesList}" Text="Selecteer een doelgroep"  DisplayMemberPath="."  />
+                </StackPanel>
+                <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0,5,0,1" Grid.RowSpan="2" >
+                    <TextBlock Style="{StaticResource Text_Big}" Text="Status" Width="280"/>
+                    <TextBlock Style="{StaticResource Text_Big}" Text="Actief" Width="160"/>
+                </StackPanel>
+
+                <StackPanel Grid.Row="4" Orientation="Vertical" >
+                    <Button Style="{StaticResource PrimaryButton_M}"
+                         Command="{Binding SaveTestCommand}"
+                         CommandParameter="{Binding Id }"
+                         Content="Opslaan"  Margin="0,0,0,15"/>
+                    <Button Style="{StaticResource SecondaryButton_M}"
+                         Command="{Binding DeleteTestCommand}"
+                         CommandParameter="{Binding Id }"
+                         Content="Verwijderen" />
+                </StackPanel>
+            </Grid>
+
+
+            <Grid Grid.Column="1">
+                <StackPanel>
+                    <TextBlock Text="Toonaudiometrie" HorizontalAlignment="Center" Height="60" Style="{StaticResource SubHeader}"/>
+                    <Grid Grid.Row="1" Height="500" Margin="0,0,0,50">
+                        <Rectangle Width="420" Fill="{StaticResource SecondaryColor}" Margin="0,-1,0,-5" HorizontalAlignment="Center">
+                            <Rectangle.Effect>
+                                <DropShadowEffect BlurRadius="20" ShadowDepth="1" Color="#dcdcdc"/>
+                            </Rectangle.Effect>
+                            <Rectangle.RadiusX>5</Rectangle.RadiusX>
+                            <Rectangle.RadiusY>5</Rectangle.RadiusY>
+                        </Rectangle>
+
+                        <!-- The ListView and its content -->
+                        <ListView Width="410" Name="AudioQuestions" ItemsSource="{Binding TestCollection}" Style="{StaticResource ListViewStyle}" d:ItemsSource="{d:SampleData ItemCount=5}" >
+                            <ListView.View>
+                                <GridView>
+                                    <GridView.ColumnHeaderContainerStyle>
+                                        <Style TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource ListViewHeaderStyle}" />
+                                    </GridView.ColumnHeaderContainerStyle>
+                                    <GridViewColumn Width="auto">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Style="{StaticResource Text}" Text="{Binding Nr}" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Width="200">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Style="{StaticResource Text}" Text="{Binding Hz}" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Width="100">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Style="{StaticResource SecondaryButton_Icon}">
+                                                    <Button.Content>
+                                                        <Image Source="{StaticResource di_trashcan}" Width="30" Height="30"/>
+                                                    </Button.Content>
+                                                </Button>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                    </Grid>
+                    <Button Style="{StaticResource PrimaryButton_M}"
+                            Command="{Binding SaveTestCommand}"
+                            CommandParameter="{Binding Id }"
+                            Content="Toevoegen"  Margin="0,0,0,15"/>
+                </StackPanel>
+            </Grid>
+            <!-- Second column content (ListView in one row) -->
+            <Grid Grid.Column="2">
+                <StackPanel>
+                    <TextBlock Text="Toonaudiometrie" HorizontalAlignment="Center" Height="60" Style="{StaticResource SubHeader}"/>
+                    <Grid Grid.Row="1" Height="500" Margin="0,0,0,50">
+                        <Rectangle Width="620" Fill="{StaticResource SecondaryColor}" Margin="0,-1,0,-5" HorizontalAlignment="Center">
+                            <Rectangle.Effect>
+                                <DropShadowEffect BlurRadius="20" ShadowDepth="1" Color="#dcdcdc"/>
+                            </Rectangle.Effect>
+                            <Rectangle.RadiusX>5</Rectangle.RadiusX>
+                            <Rectangle.RadiusY>5</Rectangle.RadiusY>
+                        </Rectangle>
+
+                        <!-- The ListView and its content -->
+                        <ListView Width="610" Name="TextQuestions" ItemsSource="{Binding TestCollection}" Style="{StaticResource ListViewStyle}" d:ItemsSource="{d:SampleData ItemCount=5}" >
+                            <ListView.View>
+                                <GridView>
+                                    <GridView.ColumnHeaderContainerStyle>
+                                        <Style TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource ListViewHeaderStyle}" />
+                                    </GridView.ColumnHeaderContainerStyle>
+                                    <GridViewColumn Width="auto">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Style="{StaticResource Text}" Text="{Binding Nr}" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Width="400">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Style="{StaticResource Text}" Text="{Binding Vraag}" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Width="100">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Style="{StaticResource SecondaryButton_Icon}">
+                                                    <Button.Content>
+                                                        <Image Source="{StaticResource di_trashcan}" Width="30" Height="30"/>
+                                                    </Button.Content>
+                                                </Button>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                    </Grid>
+                    <Button Style="{StaticResource PrimaryButton_L}"
+             Command="{Binding SaveTestCommand}"
+             CommandParameter="{Binding Id }"
+             Content="Toevoegen"  Margin="0,0,0,15"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Border>
-    
 </UserControl>
