--- a/UserInterface/Views/TestOverviewView.xaml
+++ b/UserInterface/Views/TestOverviewView.xaml
@@ -5,26 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:UserInterface.Views"
              xmlns:types="clr-namespace:BusinessLogic.Projections;assembly=BusinessLogic"
-             mc:Ignorable="d"
-             Height="740" Width="1780">
+             xmlns:commandLocation="clr-namespace:UserInterface.Commands"
+             mc:Ignorable="d">
 
 
-    <Border CornerRadius="40" Background="white" Padding="20">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="20" ShadowDepth="1"  Color="#dcdcdc"/>
-        </Border.Effect>
-
-
+    <Border Style="{StaticResource ContentContainer_XXL}">
         <Grid>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <StackPanel Orientation="Horizontal" Margin="31,17,0,0">
+                <StackPanel Orientation="Horizontal" >
                     <TextBlock Style="{StaticResource Header}" Text="Gehoortest beheer"  Width="844" />
                     <ComboBox Style="{StaticResource ComboBoxStyle}" Width="320" Height="70" ItemsSource="{Binding AudiencesList}" Text="Selecteer een doelgroep"  DisplayMemberPath="." Margin="31,0,78,0" />
-                    <Button Grid.Row="1"  Width="420" Height="70" Style="{StaticResource PrimaryButton}" Content="Nieuwe test maken" Command="{Binding StartTestCommand}"/>
+                    <Button Grid.Row="1"  Width="420" Height="70" Style="{StaticResource SecondaryButton_L}"  Content="Nieuwe test maken"/>
                 </StackPanel>
             </Grid>
 
@@ -34,32 +29,31 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <!-- Another dirty solution but corner radius on the listview just wouldnt work. -->
-                <Rectangle Width="1729" Fill="{StaticResource PrimaryColor}" Margin="5,103,0,5" HorizontalAlignment="Left" Grid.ColumnSpan="2">
+                <Rectangle Width="1719" Fill="{StaticResource SecondaryColor}" Margin="0,103,0,-6" HorizontalAlignment="Left" Grid.ColumnSpan="2">
                     <Rectangle.Effect>
                         <DropShadowEffect BlurRadius="20" ShadowDepth="1" Color="#dcdcdc"/>
                     </Rectangle.Effect>
                     <Rectangle.RadiusX>5</Rectangle.RadiusX>
                     <Rectangle.RadiusY>5</Rectangle.RadiusY>
                 </Rectangle>
-
-                <ListView Width="1718" Height="580" Name="TestsList"  ItemsSource="{Binding TestCollection}" Style="{StaticResource ListViewStyle}" Margin="11,97,0,0">
+                <ListView Width="1708" Height="580" Name="TestsList"  ItemsSource="{Binding TestCollection}" Style="{StaticResource ListViewStyle}" Margin="5,103,0,0">
                     <ListView.View>
-                        <GridView>
+                        <GridView >
                             <GridView.ColumnHeaderContainerStyle>
                                 <Style TargetType="{x:Type GridViewColumnHeader}"
                                     BasedOn="{StaticResource ListViewHeaderStyle}" />
                             </GridView.ColumnHeaderContainerStyle>
-                            <GridViewColumn Width="700" Header="Title" >
+                            <GridViewColumn Width="525" Header="Title" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Title}" />
+                                        <TextBlock Style="{StaticResource Text}" Text="{Binding Title}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn Width="400" Header="Gemaakt door" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding EmployeeName}" />
+                                        <TextBlock Style="{StaticResource Text}" Text="{Binding EmployeeName}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -72,31 +66,41 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <!--<GridViewColumn Width="150" Header="Tekst"   >
+                            <GridViewColumn Width="100">
+                                <GridViewColumn.Header>
+                                    <Image Source="{StaticResource di_wave_sine}" Width="40" Height="40"/>
+                                </GridViewColumn.Header>
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding AmountOfTextQuestions}" />
+                                        <TextBlock Style="{StaticResource Text}" Text="{Binding AmountOfToneAudiometryQuestions}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Width="150" Header="Toon"  >
+                            <GridViewColumn Width="100">
+                                <GridViewColumn.Header>
+                                    <Image Source="{StaticResource di_message_question}" Width="40" Height="40"/>
+                                </GridViewColumn.Header>
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding AmountOfToneAudiometryQuestions}" />
+                                        <TextBlock Style="{StaticResource Text}" Text="{Binding AmountOfTextQuestions}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
-                            </GridViewColumn>-->
-                            <GridViewColumn Width="200">
+                            </GridViewColumn>
+
+                            <GridViewColumn Width="275">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Style="{StaticResource PrimaryButton}"  Content="Aanpassen" />
+                                        <Button Style="{StaticResource SecondaryButton_S}"
+                                                Command="{Binding DataContext.OpenTestCommand, RelativeSource={RelativeSource AncestorType={x:Type local:TestOverviewView}}}"
+                                                CommandParameter="{Binding Id }"
+                                                Content="Aanpassen" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Width="50" Height="50" Style="{StaticResource PrimaryButton}">
+                                        <Button Style="{StaticResource SecondaryButton_Icon}">
                                             <Button.Content>
                                                 <Image Source="{StaticResource di_trashcan}" Width="30" Height="30"/>
                                             </Button.Content>
