--- a/UserInterface/App.xaml
+++ b/UserInterface/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Assets/Icons/Icons.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/trashcan.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/wave-sine.xaml"/>
+                <ResourceDictionary Source="Assets/Icons/pencil.xaml"/>
                 <ResourceDictionary Source="Assets/Icons/message-question.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="Assets/Styling/InputFieldStyles.xaml"/>
