--- a/UserInterface/Views/TestOverviewView.xaml
+++ b/UserInterface/Views/TestOverviewView.xaml
@@ -36,14 +36,14 @@
                     <Rectangle.RadiusX>5</Rectangle.RadiusX>
                     <Rectangle.RadiusY>5</Rectangle.RadiusY>
                 </Rectangle>
-                <ListView Width="1708" Height="580" Name="TestsList"  ItemsSource="{Binding TestCollection}" Style="{StaticResource ListViewStyle}" Margin="5,103,0,0">
+                <ListView Width="1708" Height="580" Name="TestsList"  ItemsSource="{Binding TestCollection}" Style="{StaticResource ListViewStyle}" Margin="5,103,0,0" d:ItemsSource="{d:SampleData ItemCount=5}">
                     <ListView.View>
                         <GridView >
                             <GridView.ColumnHeaderContainerStyle>
                                 <Style TargetType="{x:Type GridViewColumnHeader}"
                                     BasedOn="{StaticResource ListViewHeaderStyle}" />
                             </GridView.ColumnHeaderContainerStyle>
-                            <GridViewColumn Width="525" Header="Title" >
+                            <GridViewColumn Width="690" Header="Title" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock Style="{StaticResource Text}" Text="{Binding Title}" />
@@ -86,14 +86,16 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-
-                            <GridViewColumn Width="275">
+                            <GridViewColumn Width="100">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Style="{StaticResource SecondaryButton_S}"
+                                        <Button Style="{StaticResource SecondaryButton_Icon}"
                                                 Command="{Binding DataContext.OpenTestCommand, RelativeSource={RelativeSource AncestorType={x:Type local:TestOverviewView}}}"
-                                                CommandParameter="{Binding Id }"
-                                                Content="Aanpassen" />
+                                                CommandParameter="{Binding Id }">
+                                            <Button.Content>
+                                                <Image Source="{StaticResource di_pencil}" Width="30" Height="30"/>
+                                            </Button.Content>
+                                        </Button>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
