--- a/UserInterface/Assets/Styling/ListViewStyle.xaml
+++ b/UserInterface/Assets/Styling/ListViewStyle.xaml
@@ -6,6 +6,18 @@
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Padding" Value="-3,-1,-3,0"/>
         <!-- The padding is the most dirty solution there is but for some reason it has padding and i hate it.-->
+        <!--<Style.Triggers>
+            <Trigger Property="HasItems"
+                 Value="False">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ListView">
+                            <TextBlock Text="No items..."/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>-->
     </Style>
 
     <!-- Style for the ListView Header -->
@@ -59,8 +71,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-
-   
-
 </ResourceDictionary>
