--- a/UserInterface/Views/Modal.xaml
+++ b/UserInterface/Views/Modal.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="UserInterface.Views.Modal"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UserInterface.Views"
-        mc:Ignorable="d"
-        Title="Modal" Height="450" Width="800">
-    <Grid>
-        <TextBlock Text="kanker" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="96"/>
-    </Grid>
-</Window>
+﻿<UserControl x:Class="UserInterface.Views.Modal"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:UserInterface.Views"
+             mc:Ignorable="d">
+    <Border Style="{StaticResource ContentContainer_S}">
+        <Button Style="{StaticResource PrimaryButton_L}" Command="{Binding CloseModalCommand}" CommandParameter="true" Content="Close" />
+    </Border>
+</UserControl>
